[package]
name = "spielplatz"
version = "0.1.0"
authors = ["infernalfire72"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
bcrypt = "0.8"
bytes = "0.5.6"
rand = "0.7.3"
rustls = "0.18.1"
spielplatz_macros = { path = "./spielplatz_macros" }
sqlx = { version = "0.4.0-beta.1", features = ["mysql"] }